Правая колонка (доделаны стили).

--- a/app/index.html
+++ b/app/index.html
@@ -898,10 +898,10 @@
                         <div class="items">
                             <div class="item">
                                 <a href="#" class="text">Свист коробки передач ваз 21099</a>
-                                <div class="answers">
+                                <a href="#" class="answers">
                                     <i class="fa fa-comments-o"></i>
                                     <span class="count">0</span>
-                                </div>
+                                </a>
                                 <div class="item-info">
                                     <a href="#" class="author">
                                         <img src="/img/uploads/default-avatar.png" alt="" class="avatar micro"><span>Парк</span>
@@ -911,10 +911,10 @@
                             </div>
                             <div class="item">
                                 <a href="#" class="text">Можно ли ездить со сломанной передней пружиной?</a>
-                                <div class="answers">
+                                <a href="#" class="answers">
                                     <i class="fa fa-comments"></i>
                                     <span class="count">23</span>
-                                </div>
+                                </a>
                                 <div class="item-info">
                                     <a href="#" class="author">
                                         <img src="/img/uploads/default-avatar.png" alt="" class="avatar micro"><span>Alexander</span>
@@ -927,10 +927,10 @@
                                     Надо ли делать развал схождение после замены
                                     сальников рулевой колонки колонки колонки на ваз 2106?
                                 </a>
-                                <div class="answers">
+                                <a href="#" class="answers">
                                     <i class="fa fa-comments"></i>
                                     <span class="count">2 213</span>
-                                </div>
+                                </a>
                                 <div class="item-info">
                                     <a href="#" class="author">
                                         <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar micro"><span>Muph1984</span>
@@ -1017,46 +1017,67 @@
                         <h4 class="title">Лучшие пользователи</h4>
                         <div class="small-description">
                             Здесь отображаются самые активные пользователи сайта.
+                            <br>
                             <a href="#">Как сюда попасть?</a>
                         </div>
                         <div class="items">
                             <div class="item">
                                 <div class="position">1</div>
-                                <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
-                                <span class="login">Ivan</span>
-                                <span class="rank">Эксперт</span>
+                                <a href="#" class="user-avatar">
+                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                </a>
+                                <div class="user">
+                                    <a href="#" class="login"><span>Ivan</span></a>
+                                    <span class="rank">Эксперт</span>
+                                </div>
                                 <div class="rating">1 416</div>
                             </div>
                             <div class="item">
                                 <div class="position">2</div>
-                                <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
-                                <span class="login">SKS</span>
-                                <span class="rank">Эксперт</span>
+                                <a href="#" class="user-avatar">
+                                    <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
+                                </a>
+                                <div class="user">
+                                    <a href="#" class="login"><span>SKS</span></a>
+                                    <span class="rank">Эксперт</span>
+                                </div>
                                 <div class="rating">1 097</div>
                             </div>
                             <div class="item">
                                 <div class="position">3</div>
-                                <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
-                                <span class="login">Мастер</span>
-                                <span class="rank">Профи</span>
+                                <a href="#" class="user-avatar">
+                                    <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
+                                </a>
+                                <div class="user">
+                                    <a href="#" class="login"><span>Мастер</span></a>
+                                    <span class="rank">Профи</span>
+                                </div>
                                 <div class="rating">987</div>
                             </div>
                             <div class="item">
                                 <div class="position">4</div>
-                                <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
-                                <span class="login">Muph1984</span>
-                                <span class="rank">Энтузиаст</span>
+                                <a href="#" class="user-avatar">
+                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                </a>
+                                <div class="user">
+                                    <a href="#" class="login"><span>Muph1984</span></a>
+                                    <span class="rank">Энтузиаст</span>
+                                </div>
                                 <div class="rating">456</div>
                             </div>
                             <div class="item">
                                 <div class="position">5</div>
-                                <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
-                                <span class="login">Макс</span>
-                                <span class="rank">Любитель</span>
+                                <a href="#" class="user-avatar">
+                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                </a>
+                                <div class="user">
+                                    <a href="#" class="login"><span>Макс</span></a>
+                                    <span class="rank">Любитель</span>
+                                </div>
                                 <div class="rating">123</div>
                             </div>
                         </div>
-                        <a href="#">
+                        <a href="#" class="all-items-button">
                             <i class="fa fa-users"></i>
                             <span>Все пользователи</span>
                         </a>
