Мелкие стили (неправильные стили).

--- a/app/index.html
+++ b/app/index.html
@@ -621,10 +621,12 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="category">
+                                        <div class="category help-text">
                                             <span>Категория: </span>
-                                            <a href="#">Статьи</a>
-                                            <a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a>
+                                            <ul>
+                                                <li><a href="#">Статьи</a></li>
+                                                <li><a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -688,10 +690,12 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="category">
+                                        <div class="category help-text">
                                             <span>Категория: </span>
-                                            <a href="#">Статьи</a>
-                                            <a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a>
+                                            <ul>
+                                                <li><a href="#">Статьи</a></li>
+                                                <li><a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -752,10 +756,12 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="category">
+                                        <div class="category help-text">
                                             <span>Категория: </span>
-                                            <a href="#">Статьи</a>
-                                            <a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a>
+                                            <ul>
+                                                <li><a href="#">Статьи</a></li>
+                                                <li><a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -874,13 +880,15 @@
                             </a>
                         </div>
                         <div id="social-buttons-widget" class="widget">
-                            <div class="social-buttons pull-left">
-                                <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
-                                <script src="//yastatic.net/share2/share.js"></script>
-                                <div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,lj" data-counter=""></div>
-                            </div>
                             <div class="text help-text pull-left">
                                 Понравилась статья? Поделись ею на своей странице!
+                            </div>
+                            <div class="social-buttons pull-left">
+                                <!--Yandex Блок "Поделиться"-->
+                                <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+                                <script src="//yastatic.net/share2/share.js"></script>
+                                <div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,evernote,lj,pocket,viber,whatsapp,skype,telegram"></div>
+                                <!--Yandex Блок "Поделиться"-->
                             </div>
                         </div>
                     </section>
@@ -951,7 +959,9 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <img src="/img/uploads/statya-1-mini.png" alt="" class="item-image">
+                                <a href="#" class="text">
+                                    <img src="/img/uploads/statya-1-mini.png" alt="" class="item-image">
+                                </a>
                                 <div class="item-content">
                                     <a href="#" class="text">
                                         Замена сайлентблоков передних (нижних верхних)
@@ -972,7 +982,9 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="/img/uploads/statya-2-mini.png" alt="" class="item-image">
+                                <a href="#" class="text">
+                                    <img src="/img/uploads/statya-2-mini.png" alt="" class="item-image">
+                                </a>
                                 <div class="item-content">
                                     <a href="#" class="text">
                                         Замена охлаждающей жидкости (антифриза или тосола)
@@ -992,7 +1004,9 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="/img/uploads/statya-3-mini.png" alt="" class="item-image">
+                                <a href="#" class="text">
+                                    <img src="/img/uploads/statya-3-mini.png" alt="" class="item-image">
+                                </a>
                                 <div class="item-content">
                                     <a href="#" class="text">
                                         Замена радиатора печки на автомобиле ВАЗ-2101,
