Адаптивность шапки для LG, MD, SM.

--- a/app/index.html
+++ b/app/index.html
@@ -179,6 +179,11 @@
 
                             <div class="pull-right">
                                 <div class="user-panel">
+                                    <div><span class="visible-lg">LG</span></div>
+                                    <div><span class="visible-md">MD</span></div>
+                                    <div><span class="visible-sm">SM</span></div>
+                                    <div><span class="visible-xs">XS</span></div>
+
                                     <div class="notifications pull-left dropdown">
                                         <a href="#" class="notification button"><i class="fa fa-bell-o"></i></a>
                                         <div class="dropdown-container">
@@ -395,12 +400,12 @@
             <div id="header">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-7">
                             <a href="index.html">
                                 <img src="/img/logo-full.svg" alt="Avtorem.info" class="logo">
                             </a>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-5">
                             <h1>
                                 Школа авторемонта
                                 <span class="slogan">
@@ -408,14 +413,14 @@
                                 и обслуживанию автомобилей своими руками
                             </span>
                             </h1>
-                            <button class="menu-toggle-button toggle-button pull-right visible-xs">
+                            <button class="menu-toggle-button toggle-button pull-right visible-xs visible-sm">
                                 <i class="fa fa-bars fa-2x"></i>
                                 <span>Меню</span>
                             </button>
                         </div>
-                        <div class="col-md-5 hidden-xs">
+                        <div class="col-md-5 hidden-xs hidden-sm">
                             <div class="pull-left">
-                                <nav class="hidden-xs">
+                                <nav>
                                     <ul class="menu contact-menu horisontal">
                                         <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
                                         <li><a href="#"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
@@ -430,13 +435,13 @@
                                         <li><a href="#"><i class="fa fa-odnoklassniki"></i></a></li>
                                     </ul>
 
-                                    <ul class="pull-left horisontal m-l-50">
+                                    <ul class="pull-left horisontal">
                                         <li><a href="#"><i class="fa fa-bookmark-o"></i></a></li>
                                         <li><a href="#"><i class="fa fa-rss"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="pull-right hidden-xs">
+                            <div class="pull-right hidden-xs hidden-sm">
                                 <ul class="menu info-menu">
                                     <li><a href="#">Правила сайта</a></li>
                                     <li><a href="#">ЧаВо</a></li>
@@ -451,7 +456,7 @@
                     <div class="row hidden-xs">
                         <div class="col-md-12">
                             <div class="menu-section">
-                                <nav>
+                                <nav class="hidden-sm">
                                     <ul class="menu main-menu pull-left">
                                         <li class="active">
                                             <a href="index.html">
@@ -1192,7 +1197,7 @@
                                 <li><a href="#"><i class="fa fa-odnoklassniki"></i></a></li>
                             </ul>
 
-                            <ul class="pull-left horisontal m-l-50">
+                            <ul class="pull-left horisontal">
                                 <li><a href="#"><i class="fa fa-bookmark-o"></i></a></li>
                                 <li><a href="#"><i class="fa fa-rss"></i></a></li>
                             </ul>
