Исправление мобильного меню (прыгала страница при загрузке).

--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 
 <body>
 
-    <div id="menu" class="dark-section">
+    <div id="menu" class="dark-section" style="display: none">
         <button class="menu-close-button pull-right">
             <svg viewbox="0 0 40 40">
                 <path class="close-x" d="M 10,10 L 30,30 M 30,10 L 10,30" />
