Адаптивность футера для SM, XS.

--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 
 <body>
 
-    <div id="menu" class="dark-section" style="display: none">
+    <div id="menu" class="dark-section">
         <button class="menu-close-button pull-right">
             <svg viewbox="0 0 40 40">
                 <path class="close-x" d="M 10,10 L 30,30 M 30,10 L 10,30" />
@@ -1178,34 +1178,36 @@
         <footer class="dark-section">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-3 col-md-4">
-                        <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
+                    <div class="col-lg-3 col-md-4 col-sm-12">
+                        <div class="row">
+                            <div class="full-xxs col-xs-6 col-sm-5 col-md-12">
+                                <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
+                            </div>
+                            <div class="full-xxs col-xs-6 col-sm-7 col-md-12">
+                                <div class="copyright">
+                                    При использовании авторских статей
+                                    ссылка на сайт обязательна.
+                                    <span class="without-enter">
+                                        © <a href="#" class="active">www.avtorem.info</a> 2010 - 2016
+                                    </span>
+                                </div>
+                                <div class="social-links">
+                                    <ul class="pull-left horisontal">
+                                        <li><a href="#"><i class="fa fa-vk"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-odnoklassniki"></i></a></li>
+                                    </ul>
 
-                        <div class="copyright">
-                            При использовании авторских статей
-                            ссылка на сайт обязательна.
-                            <span class="without-enter">
-                                © <a href="#" class="active">www.avtorem.info</a> 2010 - 2016
-                            </span>
+                                    <ul class="pull-left horisontal">
+                                        <li><a href="#"><i class="fa fa-bookmark-o"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
-
-                        <div class="social-links">
-                            <ul class="pull-left horisontal">
-                                <li><a href="#"><i class="fa fa-vk"></i></a></li>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-odnoklassniki"></i></a></li>
-                            </ul>
-
-                            <ul class="pull-left horisontal">
-                                <li><a href="#"><i class="fa fa-bookmark-o"></i></a></li>
-                                <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                            </ul>
-                        </div>
-
-                        <div class="clearfix"></div>
                     </div>
-                    <div class="col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-0 col-xs-6">
+                    <div class="col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-0 col-sm-3 col-xs-6">
                         <div class="title">Меню</div>
                         <nav>
                             <ul class="menu info-menu">
@@ -1220,7 +1222,7 @@
                             </ul>
                         </nav>
                     </div>
-                    <div class="col-lg-2 col-md-2 col-xs-6">
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-6">
                         <div class="title">Информация</div>
                         <ul class="menu info-menu">
                             <li><a href="#">Правила сайта</a></li>
@@ -1236,7 +1238,7 @@
                             </ul>
                         </nav>
                     </div>
-                    <div class="col-lg-3 col-md-4 col-xs-12">
+                    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="title">
                             Подписка на рассылку
                         </div>
