--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
 <body>
 
     <div id="menu" class="dark-section">
-        <button class="menu-close-button pull-right">
+        <button class="menu-close-button close-button">
             <svg viewbox="0 0 40 40">
                 <path class="close-x" d="M 10,10 L 30,30 M 30,10 L 10,30" />
             </svg>
@@ -400,23 +400,31 @@
             <div id="header">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-4 col-sm-7">
+                        <div class="col-md-4 col-sm-6 col-xs-6 full-xxs">
                             <a href="index.html">
                                 <img src="/img/logo-full.svg" alt="Avtorem.info" class="logo">
                             </a>
                         </div>
-                        <div class="col-md-3 col-sm-5">
+                        <div class="col-md-3 col-sm-4 col-xs-4">
                             <h1>
                                 Школа авторемонта
                                 <span class="slogan">
-                                Статьи, советы и рекомендации по ремонту
-                                и обслуживанию автомобилей своими руками
-                            </span>
+                                    Статьи, советы и рекомендации по ремонту
+                                    и обслуживанию автомобилей своими руками
+                                </span>
                             </h1>
-                            <button class="menu-toggle-button toggle-button pull-right visible-xs visible-sm">
-                                <i class="fa fa-bars fa-2x"></i>
-                                <span>Меню</span>
-                            </button>
+                        </div>
+                        <div class="visible-xs visible-sm col-sm-2 col-xs-2">
+                            <div class="menu mobile-buttons-menu">
+                                <button class="menu-toggle-button toggle-button pull-right">
+                                    <span>Меню</span>
+                                    <i class="fa fa-bars fa-2x"></i>
+                                </button>
+                                <button class="pull-right">
+                                    <span>Поиск</span>
+                                    <i class="fa fa-search fa-2x"></i>
+                                </button>
+                            </div>
                         </div>
                         <div class="col-md-5 hidden-xs hidden-sm">
                             <div class="pull-left">
@@ -453,10 +461,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row hidden-xs">
+                    <div class="row hidden-xs hidden-sm">
                         <div class="col-md-12">
                             <div class="menu-section">
-                                <nav class="hidden-sm">
+                                <nav>
                                     <ul class="menu main-menu pull-left">
                                         <li class="active">
                                             <a href="index.html">
@@ -1179,30 +1187,32 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-sm-12">
-                        <div class="row">
-                            <div class="full-xxs col-xs-6 col-sm-5 col-md-12">
-                                <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
-                            </div>
-                            <div class="full-xxs col-xs-6 col-sm-7 col-md-12">
-                                <div class="copyright">
-                                    При использовании авторских статей
-                                    ссылка на сайт обязательна.
-                                    <span class="without-enter">
-                                        © <a href="#" class="active">www.avtorem.info</a> 2010 - 2016
-                                    </span>
+                        <div class="first-column">
+                            <div class="row">
+                                <div class="full-xxs col-xs-12 col-sm-5 col-md-12">
+                                    <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
                                 </div>
-                                <div class="social-links">
-                                    <ul class="pull-left horisontal">
-                                        <li><a href="#"><i class="fa fa-vk"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-odnoklassniki"></i></a></li>
-                                    </ul>
+                                <div class="full-xxs col-xs-12 col-sm-7 col-md-12">
+                                    <div class="copyright">
+                                        При использовании авторских статей
+                                        ссылка на сайт обязательна.
+                                        <span class="without-enter">
+                                            © <a href="#" class="active">www.avtorem.info</a> 2010 - 2016
+                                        </span>
+                                    </div>
+                                    <div class="social-links">
+                                        <ul class="pull-left horisontal">
+                                            <li><a href="#"><i class="fa fa-vk"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-odnoklassniki"></i></a></li>
+                                        </ul>
 
-                                    <ul class="pull-left horisontal">
-                                        <li><a href="#"><i class="fa fa-bookmark-o"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                                    </ul>
+                                        <ul class="pull-left horisontal">
+                                            <li><a href="#"><i class="fa fa-bookmark-o"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1239,28 +1249,30 @@
                         </nav>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                        <div class="title">
-                            Подписка на рассылку
-                        </div>
-                        <form action="#" id="subscribtions-form">
-                            <div class="input-group">
-                                <input type="text" placeholder="Введите email-адрес">
-                                <span class="input-group-button">
+                        <div class="last-column">
+                            <div class="title">
+                                Подписка на рассылку
+                            </div>
+                            <form action="#" id="subscribtions-form">
+                                <div class="input-group">
+                                    <input type="text" placeholder="Введите email-адрес">
+                                    <span class="input-group-button">
                                 <button class="button accent-button" type="button">Подписаться</button>
                             </span>
-                            </div>
-                        </form>
-                        <p class="small">
-                            * Подписавшись, Вы будете получать уведомления
-                            на email о новых статьях и вопросах.
-                        </p>
-                        <p class="small">
-                            ** Для отмены подписки введите email-адрес,
-                            на который оформлена подписка, и нажмите кнопку «Отписаться».
-                        </p>
+                                </div>
+                            </form>
+                            <p class="small">
+                                * Подписавшись, Вы будете получать уведомления
+                                на email о новых статьях и вопросах.
+                            </p>
+                            <p class="small">
+                                ** Для отмены подписки введите email-адрес,
+                                на который оформлена подписка, и нажмите кнопку «Отписаться».
+                            </p>
 
-                        <div class="m-t-20 align-center-xs">
-                            <img src="/img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
+                            <div class="m-t-20 align-center-xs">
+                                <img src="/img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
+                            </div>
                         </div>
                     </div>
                 </div>
