Шрифты (opensans italic), ссылки в HeaderWidget.

--- a/app/index.html
+++ b/app/index.html
@@ -203,7 +203,7 @@
                                                     <li>
                                                         <a href="#">
                                                             <i class="fa fa-thumbs-up info"></i>
-                                                            <span class="date">25 мин. назад</span>
+                                                            <span class="small-text date">25 мин. назад</span>
                                                             <span class="text">
                                                             Пользователю Support понравилась ваша статья.
                                                         </span>
@@ -215,7 +215,7 @@
                                                     <li>
                                                         <a href="#">
                                                             <i class="fa fa-comment success"></i>
-                                                            <span class="date">1 ч. назад</span>
+                                                            <span class="small-text date">1 ч. назад</span>
                                                             <span class="text">
                                                             Роман (roman@email.com) оставил комментарий к вашей статье.
                                                         </span>
@@ -227,7 +227,7 @@
                                                     <li>
                                                         <a href="#">
                                                             <i class="fa fa-user-plus success"></i>
-                                                            <span class="date">16 ч. назад</span>
+                                                            <span class="small-text date">16 ч. назад</span>
                                                             <span class="text">
                                                             Зарегистрировался новый пользователь Denwebart.
                                                         </span>
@@ -239,7 +239,7 @@
                                                     <li>
                                                         <a href="#">
                                                             <i class="fa fa-trash danger"></i>
-                                                            <span class="date">2 д. назад</span>
+                                                            <span class="small-text date">2 д. назад</span>
                                                             <span class="text">
                                                             Ваш вопрос был удален.
                                                         </span>
